# MASLAB2024-team11

./: README.md
src/camera/: package.xml  setup.py
src/camera/camera/: homography_transformer.py  image_proc.py
src/drive/: drive.perspective  package.xml  readme.md  setup.py
src/drive/drive/: driver.py  kitbot.py  rotation_conversion.py
src/drive_interface/: CMakeLists.txt  LICENSE  README.md  package.xml
src/drive_interface/msg/: EncoderVals.msg  LimitBools.msg  ManipCmd.msg  RotationGoals.msg
src/kitbot_sm/: state_machine.py
src/launch_utils/: package.xml  setup.py
src/launch_utils/launch/: silly_launch.py
